# actix_yew_websockets

./: .env  .gitignore  Cargo.toml  README.md  TUTORIAL.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/2024-03-07-184123_create_users_table/: up.sql
backend/migrations/2024-03-07-184129_create_comments_table/: up.sql
backend/src/: channel_listeners.rs  main.rs  models.rs  schema.rs  ws.rs
commons/: Cargo.toml
commons/src/: comments.rs  lib.rs  messages.rs  users.rs
frontend/: Cargo.toml  index.html  out.txt
frontend/src/: components.rs  lib.rs  main.rs  pages.rs  reactors.rs  router.rs  stores.rs  utils.rs  worker.rs
frontend/src/components/: app.rs  comment.rs  comment_popup.rs  comments_dashboard.rs  counter.rs  error_page.rs  login_form.rs
frontend/src/pages/: comments.rs  login.rs
frontend/src/stores/: user.rs
frontend/styles/: colors.scss  dashboard.scss  fonts.scss  forms.scss  fullscreen_center.scss  index.scss  popup.scss
