[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
commons = { path = "../commons", features = ["backend"] }
diesel = {version="2.1.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15.7"
env_logger = "0.11.2"
log = "0.4.21"
