[package]
name = "commons"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# We need to be able to implement the From trait for types defined in third
# party crates that are used in the backend and frontend. In order to do so,
# we define two features that are used to enable the implementation of the
# From trait for types defined in third party crates respectively in the
# backend and frontend. The features are called `backend` and `frontend`.

actix-web-actors = { version = "4.3.0", optional = true }
actix-web = { version = "4.0", optional = true }

gloo-net = {version="0.5.0", features=["websocket"], optional = true}
log = "0.4.21"
bincode = "1.3.3"
bytes = {version="1.5.0", optional = true}
actix = {version="0.13.3", optional = true}

[features]
# The `backend` feature is used to enable the implementation of the From trait
# for types defined in third party crates in the backend.
backend = [ "actix-web", "actix-web-actors", "bytes", "actix" ]

# The `frontend` feature is used to enable the implementation of the From trait
# for types defined in third party crates in the frontend.
frontend = ["gloo-net"]
