[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
commons = { path = "../commons", features = ["frontend"] }
gloo-net = {version="0.5.0", features=["websocket"]}
log = "0.4.21"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-agent = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.41"
futures = "0.3.30"
wasm-bindgen = "0.2.91"
web-sys = "0.3.69"
chrono = "0.4.35"
yewdux = {version="0.10.0", features=["doctests"]}
yew-router = "0.18.0"
